moved memory setting to jenkins global